<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"

    tools:context=".MainActivity">


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plec_txt" />
    <Spinner
        android:id="@+id/opcja_plec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/plec_opcje" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wzrost_txt"
        />

    <EditText
        android:id="@+id/wzrost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wskazowka_wzrost"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masa_txt"
        />

    <EditText
        android:id="@+id/masa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wskazowka_masa"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wiek_txt"
        />

    <EditText
        android:id="@+id/wiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wskazowka_wiek"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sposob_txt"
        />
    <Spinner
        android:id="@+id/opcja_sposob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sposob_opcje" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/start_txt" />

    <TextView
        android:id="@+id/wynik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>